--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <a href="" class="header__title">Вспомнить Всё 2024</a>
+        <a href="" class="header__title">Вспомнить Всё 2025</a>
         <p class="header__intro">Карточки для запоминания теории по профильной математике</p>
       </header>
       <section class="categoryWrapper">
@@ -29,11 +29,12 @@
           <h1 class="intro__title">📐 Карточки для запоминания теории по профилю</h1>
           <p><span>⭐</span> Выбираете задание</p>
           <p><span>✨</span> Открываете карточки для повторения теории</p>
-         <p>Связаться со мной в Telegram: <a href="https://t.me/CMonte_Cristo">https://t.me/CMonte_Cristo</a></p>
+           <p><span>💯💯💯</span> Подготовка к егэ по математике </p>
+         <p>Связаться со мной в Telegram ✈️✈️: <a href="https://t.me/CMonte_Cristo">https://t.me/CMonte_Cristo</a></p>
         </div>
       </section>
       <button onclick="topFunction()" id="backToTop" title="Go to top">▲</button>
-      <footer class="footer"><p>© 2024 PaidEGE — все права не защищены</p></footer>
+      <footer class="footer"><p>© 2025 — все права не защищены </p></footer>
     </div>
     <script defer src="./script.js"></script>
   </body>
